--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ML Kit + OCV</string>
+    <string name="train">Train</string>
+    <string name="recognise">Recognise</string>
 </resources>
